--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.datasource.url=jdbc:mysql://localhost:3306/smsapp?useSSL=false
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=smsappuser
 spring.datasource.password=smsappuser
+schoolmanagement.application.title=Colegio Central
+schoolmanagement.application.slogan=Para un mejor futuro
