Edicion en la descripcion del proyecto

--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>school-management</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>school-management</name>
-	<description>Demo project for Spring Boot</description>
+	<description>Sistema de gestion de estudiantes</description>
 
 	<properties>
 		<java.version>14</java.version>
