--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.datasource.username=smsappuser
 spring.datasource.password=smsappuser
 schoolmanagement.application.title=Colegio Central
 schoolmanagement.application.slogan=Para un mejor futuro
+
+spring.jpa.properties..hibernate.enable_lazy_load_no_trans=true
