--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/smsapp?useSSL=false
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=smsappuser
 spring.datasource.password=smsappuser
-schoolmanagement.application.title=Colegio Central
-schoolmanagement.application.slogan=Para un mejor futuro
+schoolmanagement.application.title=Nombre configurable
+schoolmanagement.application.slogan=Eslogan configurable
+server.port=8081
 
 spring.jpa.properties..hibernate.enable_lazy_load_no_trans=true
