--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.rmiranda</groupId>
 	<artifactId>school-management</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 	<name>school-management</name>
 	<description>Sistema de gestion de estudiantes</description>
 
