custom 404, 500 error pages

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,5 +5,6 @@ spring.datasource.password=smsappuser
 schoolmanagement.application.title=Nombre configurable
 schoolmanagement.application.slogan=Eslogan configurable
 server.port=8081
+server.error.whitelabel.enabled=false
 
 spring.jpa.properties..hibernate.enable_lazy_load_no_trans=true
